# dio-blog-fastapi

./: pyproject.toml
src/controllers/: post.py
src/schemas/: post.py
