[project]
name = "dio-blog-fastapi"
version = "0.1.0"
package-mode = false
description = ""
authors = [
    {name = "Erick Sasaki",email = "erick_sasaki@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard] (>=0.38.0,<0.39.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
