[tool.poetry]
name = "dio-blog-fastapi"
version = "0.1.0"
package-mode = false
description = ""
authors = ["Erick Sasaki <erick_sasaki@hotmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.13"
fastapi = "*"
uvicorn = {extras = ["standard"], version = ">=0.30.0"}


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
